--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rezzy-backend",
   "version": "1.0.0",
   "type": "module",
+  "engines": { "node": ">=18" },
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
