--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "rezzy-backend",
   "version": "1.0.0",
   "type": "module",
-  "engines": { "node": ">=18" },
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
@@ -17,6 +19,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.15",
     "dotenv": "^17.2.1",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "google-auth-library": "^10.3.0",
