--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^10.3.0",
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
