--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "seed": "node src/seed.js"
+    "seed": "node src/seed.js",
+    "migrate:photos": "node src/scripts/migrate-restaurant-photos.js"
+
   },
   "dependencies": {
     "apple-signin-auth": "^2.0.0",
