--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "node src/server.js",
     "seed": "node src/seed.js",
     "migrate:photos": "node src/scripts/migrate-restaurant-photos.js"
-
   },
   "dependencies": {
     "apple-signin-auth": "^2.0.0",
@@ -34,6 +33,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "qrcode": "^1.5.4",
+    "stripe": "^20.0.0",
     "zod": "^4.1.4"
   },
   "devDependencies": {
