--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -17,7 +17,8 @@
     "exceljs": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
