--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.7",
+    "electron-updater": "^6.6.2",
     "exceljs": "^4.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,19 +42,27 @@
     "wait-on": "^9.0.3"
   },
   "main": "electron/main.cjs",
-  "build": {
-    "appId": "com.umutugur.rezvix.desktop",
-    "productName": "Rezvix",
-    "files": [
-      "dist/**",
-      "electron/**",
-      "package.json"
-    ],
-    "mac": {
-      "target": "dmg"
-    },
-    "win": {
-      "target": "nsis"
+ "build": {
+  "appId": "com.umutugur.rezvix.desktop",
+  "productName": "Rezvix",
+  "files": [
+    "dist/**",
+    "electron/**",
+    "package.json"
+  ],
+  "mac": {
+    "target": ["dmg", "zip"]
+  },
+  "win": {
+    "target": "nsis"
+  },
+  "publish": [
+    {
+      "provider": "github",
+      "owner": "umutugur",
+      "repo": "rezzy-backend",
+      "releaseType": "release"
     }
-  }
+  ]
+}
 }
