chore: notarized mac build + desktop auto-update

--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -32,9 +32,31 @@ jobs:
         working-directory: rezzy-webpanel
         run: npm ci
 
+      # ✅ macOS codesign cert import (sadece mac)
+      - name: Import Apple Developer ID Certificate
+        if: matrix.os == 'macos-latest'
+        env:
+          MAC_CERTS_B64: ${{ secrets.MAC_CERTS_B64 }}
+          MAC_CERTS_PASSWORD: ${{ secrets.MAC_CERTS_PASSWORD }}
+        run: |
+          echo "$MAC_CERTS_B64" | base64 --decode > /tmp/mac-certs.p12
+          security create-keychain -p "" build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p "" build.keychain
+          security import /tmp/mac-certs.p12 -k build.keychain -P "$MAC_CERTS_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security
+          security set-key-partition-list -S apple-tool:,apple: -s -k "" build.keychain
+          security find-identity -v -p codesigning
+
       - name: Build + Publish to GitHub Releases
         working-directory: rezzy-webpanel
         run: npx electron-builder --publish always
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CI: true
+
+          # ✅ mac only: codesign + notarize
+          CSC_IDENTITY_AUTO_DISCOVERY: ${{ matrix.os == 'macos-latest' && 'true' || '' }}
+
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
