chore:v09  notarized mac build + dedsktop auto-update

--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -28,11 +28,21 @@ jobs:
           cache: npm
           cache-dependency-path: rezzy-webpanel/package-lock.json
 
+      # ✅ electron-builder cache (çok hızlandırır)
+      - name: Cache electron-builder
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/electron
+            ~/.cache/electron-builder
+            ~/Library/Caches/electron
+            ~/Library/Caches/electron-builder
+          key: ${{ runner.os }}-electron-builder-${{ hashFiles('rezzy-webpanel/package-lock.json') }}
+
       - name: Install
         working-directory: rezzy-webpanel
         run: npm ci
 
-      # ✅ macOS codesign cert import
       - name: Import Apple Developer ID Certificate
         if: runner.os == 'macOS'
         env:
@@ -47,7 +57,6 @@ jobs:
           security set-key-partition-list -S apple-tool:,apple: -s -k "" build.keychain
           security find-identity -v -p codesigning
 
-      # ✅ Apple connectivity check
       - name: Network check (Apple)
         if: runner.os == 'macOS'
         run: |
@@ -57,14 +66,17 @@ jobs:
 
       - name: Build + Publish to GitHub Releases
         working-directory: rezzy-webpanel
-        run: npx electron-builder --publish always
+        run: npx electron-builder --publish always --debug
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CI: true
 
-          # ✅ mac only: codesign + notarize
-          CSC_IDENTITY_AUTO_DISCOVERY: ${{ runner.os == 'macOS' && 'true' || '' }}
+          # log
+          DEBUG: "electron-builder,electron-builder:*,app-builder-lib:*,@electron/notarize*"
+          ELECTRON_BUILDER_LOG_LEVEL: debug
 
+          # mac only notarize (electron-builder built-in)
+          CSC_IDENTITY_AUTO_DISCOVERY: ${{ runner.os == 'macOS' && 'true' || '' }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
