--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build + Publish to GitHub Releases
         working-directory: rezzy-webpanel
-        run: npx electron-builder --publish always --debug
+        run: npx electron-builder --publish always --verbose
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CI: true
