--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rezvix-webpanel",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "private": true,
   "type": "module",
   "description": "Rezvix Web Panel Desktop",
@@ -45,34 +45,35 @@
     "wait-on": "^9.0.3"
   },
   "main": "electron/main.cjs",
+  
   "build": {
-  "appId": "com.umutugur.rezvix.desktop",
-  "productName": "Rezvix",
-  "files": ["dist/**", "electron/**", "package.json"],
+    "appId": "com.umutugur.rezvix.desktop",
+    "productName": "Rezvix",
+    "files": ["dist/**", "electron/**", "package.json"],
 
-  "mac": {
-    "target": ["dmg", "zip"],
-    "hardenedRuntime": true,
-    "gatekeeperAssess": false,
-    "entitlements": "electron/entitlements.mac.plist",
-    "entitlementsInherit": "electron/entitlements.mac.plist"
-  },
+    "mac": {
+      "target": ["zip"],
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "electron/entitlements.mac.plist",
+      "entitlementsInherit": "electron/entitlements.mac.plist"
+    },
 
-  "dmg": {
-    "sign": true
-  },
+    "dmg": {
+      "sign": false
+    },
 
-  "win": {
-    "target": "nsis"
-  },
+    "win": {
+      "target": "nsis"
+    },
 
-  "publish": [
-    {
-      "provider": "github",
-      "owner": "umutugur",
-      "repo": "rezzy-backend",
-      "releaseType": "release"
-    }
-  ]
-}
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "umutugur",
+        "repo": "rezzy-backend",
+        "releaseType": "release"
+      }
+    ]
+  }
 }
