--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -1,10 +1,11 @@
 {
   "name": "rezvix-webpanel",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": true,
   "type": "module",
   "description": "Rezvix Web Panel Desktop",
   "author": "Umut Ugur",
+  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -44,15 +45,13 @@
     "vite": "^5.4.8",
     "wait-on": "^9.0.3"
   },
-  "main": "electron/main.cjs",
-  
   "build": {
     "appId": "com.umutugur.rezvix.desktop",
     "productName": "Rezvix",
     "files": ["dist/**", "electron/**", "package.json"],
 
     "mac": {
-      "target": ["zip"],
+      "target": ["dmg", "zip"],
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "entitlements": "electron/entitlements.mac.plist",
@@ -60,7 +59,7 @@
     },
 
     "dmg": {
-      "sign": false
+      "sign": true
     },
 
     "win": {
@@ -74,6 +73,8 @@
         "repo": "rezzy-backend",
         "releaseType": "release"
       }
-    ]
+    ],
+
+    "afterSign": "electron/notarize.cjs"
   }
 }
