chore:v1.1.6  notarized mac build + dedsktop auto-update

--- a/rezzy-webpanel/package.json
+++ b/rezzy-webpanel/package.json
@@ -51,12 +51,13 @@
     "files": ["dist/**", "electron/**", "package.json"],
 
     "mac": {
-      "timestamp": true,
       "target": ["dmg", "zip"],
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "entitlements": "electron/entitlements.mac.plist",
-      "entitlementsInherit": "electron/entitlements.mac.plist"
+      "entitlementsInherit": "electron/entitlements.mac.plist",
+      "timestamp": "http://timestamp.apple.com/ts01"
+
     },
 
     "dmg": {
