chore:v1.1.8  notarized mac build + dedsktop auto-update

--- a/.github/workflows/release-desktop.yml
+++ b/.github/workflows/release-desktop.yml
@@ -40,37 +40,32 @@ jobs:
         run: |
           set -euo pipefail
 
-          # 1) Secret gerçekten geliyor mu?
           if [ -z "${MAC_CERTS_B64:-}" ]; then
             echo "MAC_CERTS_B64 is empty. Secrets are not available to this run."
             exit 1
           fi
 
-          # 2) p12 üret
           echo "$MAC_CERTS_B64" | base64 --decode > /tmp/mac-certs.p12
 
-          # 3) p12 boş mu?
           if [ ! -s /tmp/mac-certs.p12 ]; then
             echo "/tmp/mac-certs.p12 is empty after base64 decode."
             exit 1
           fi
 
-          # 4) Keychain oluştur/aktif et
           security create-keychain -p "" build.keychain
           security set-keychain-settings -lut 21600 build.keychain
           security unlock-keychain -p "" build.keychain
 
-          # 5) Keychain'i search list + default yap (kritik)
+          # search list + default (kritik)
           security list-keychains -d user -s build.keychain
           security default-keychain -s build.keychain
 
-          # 6) Import (CI için stabil: -A)
+          # import (CI için stabil)
           security import /tmp/mac-certs.p12 -k build.keychain -P "$MAC_CERTS_PASSWORD" -A
 
-          # 7) codesign erişimi
+          # codesign erişimi
           security set-key-partition-list -S apple-tool:,apple: -s -k "" build.keychain
 
-          # 8) Doğrula
           security find-identity -v -p codesigning build.keychain
           security show-keychain-info build.keychain || true
 
@@ -79,6 +74,7 @@ jobs:
         run: |
           echo "Checking Apple connectivity..."
           curl -I --max-time 20 https://appstoreconnect.apple.com || true
+          curl -I --max-time 20 https://appstoreconnect.apple.com/notary/v2/ || true
           curl -I --max-time 20 https://developer.apple.com || true
 
       - name: Codesign sanity check (mac)
@@ -97,15 +93,17 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CI: true
 
-          DEBUG: "electron-builder,electron-builder:*,app-builder-lib:*,@electron/notarize*"
+          DEBUG: "electron-builder,electron-builder:*,app-builder-lib:*"
           ELECTRON_BUILDER_LOG_LEVEL: debug
           CSC_DEBUG: "true"
 
+          # codesign
           CSC_IDENTITY_AUTO_DISCOVERY: ${{ runner.os == 'macOS' && 'true' || '' }}
+          CSC_KEYCHAIN: build.keychain
+          CSC_KEYCHAIN_PASSWORD: ""
 
+          # notarize (afterSign -> electron/notarize.cjs)
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-
-          CSC_KEYCHAIN: build.keychain
-          CSC_KEYCHAIN_PASSWORD: ""
+          NOTARY_RETRIES: "6"
